--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             background-color: #334155;
             color: #E4F132;
             font-size: 20px;
-            padding: 20px;
-            margin: 20px;
+            padding: 10px;
+            margin: 10px;
             width: 280px;
             border-radius: 10px;
         }
@@ -41,6 +41,11 @@
             background-color: #1f2937;
             color: #FBA90A;
         }
+        
+        #container > div > p:hover {
+            color: #E4F132;
+        }
+
     </style>
 
 </head>
