added meta tags

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>
-  Python | Bash dev Sergey Samoylov
-  </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/index.css">
+    <title>
+    Python | Bash dev Sergey Samoylov
+    </title>
+
+    <meta charset="UTF-8">
+    
+    <meta name="Author" content="Sergey Samoylov">
+    <meta name="Keywords" content="Python, Bash, GNU/Linux, command line, Sergey Samoylov">
+    <meta name="Description" content="Python development with inspiration and knowledge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <h1 class="text-3xl font-bold my-10 text-center text-slate-300">
